# pretty-numbers

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pretty_numbers.py  pretty_numbers.pyi  pyproject.toml  setup.py  test_pretty_numbers.py  tox.ini
.circleci/: config.yml
pretty_numbers/: __init__.py  pretty_numbers.py  test_pretty_numbers.py
