[tool.poetry]
name = "prettynumbers"
version = "0.1.1"
authors = ["gerardk <gerardk@gmail.com>"]
description="Display a range of numbers in a human readable way"
license="GNU GENERAL PUBLIC LICENSE"

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
isort = "^5.12.0"
nose = "^1.3.7"
codecov = "^2.1.12"
black = "^21.11b1"
mypy = "^0.910"
twine = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 82

[tool.pylint.MASTER]
fail-under=10

[tool.pylint.'MESSAGES CONTROL']
disable=["C0114", "C0116", "C0115", "E1101", "C0206", "W0511", "R0801", "invalid-name"]
